# dse.sdp

./: .dockerignore  .gitignore  CONTRIBUTING.md  CPPLINT.cfg  Makefile  NOTICE  README.md  Taskfile.yml  setup.sh
.devcontainer/: .bash_aliases  Dockerfile  Dockerfile-builder  builder-entrypoint.sh  devcontainer.env  devcontainer.json
.github/linters/: .golangci.yml
.github/workflows/: ci.yaml  containers.yaml  dependabot.yaml  examples.yaml  run_sdp_project.yml  super-linter.yaml
actions/simer/: action.yml
ast/: Makefile  README.md  go.mod  go.sum  stack.yaml
ast/cmd/ast/: main.go  main_test.go
ast/internal/app/convert/: convert.go  convert_test.go
ast/internal/app/generate/: expand.go  expand_test.go  generate.go  generate_test.go  metadata_lookup.go  simulation.go  simulation_test.go  taskfile.go  taskfile_common.go  taskfile_model.go  taskfile_test.go
ast/internal/app/resolve/: resolve.go  resolve_test.go
doc/: Makefile
doc/html2img/: Dockerfile  Makefile  README.md  go.mod  main.go
doc/static/: syntax_diagrams.html
doc/yed/: overview.graphml
dsl/: Makefile  README.md  package.json  tsconfig.json
dsl/examples/dsl/: detailed.dse  single_fmu.dse  stacks.dse
dsl/examples/scripts/: lexer.js  lexer.ts  parser.ts
dsl/lib/lexer/: lexing.js  lexing.ts
dsl/lib/parser/: parsing.js  parsing.ts
dsl/tests/scripts/: ast_paths.sh  ast_stats.sh
dsl/tests/testscript/: channel.txtar  envar.txtar  file.txtar  model.txtar  stack.txtar  var.txtar
examples/e2e/: .gitignore  Makefile  README.md  openloop.dse  openloop.yaml
examples/e2e/project/: signalgroup.yaml
examples/fmugw/: .gitignore  Makefile  README.md  simulation.dse
examples/gateway/: Makefile  README.md  gateway.dse  input.csv  input_signalgroup.yaml
examples/graph/: README.md
examples/graph/duplicate_writes/data/: simulation.yaml
examples/graph/stack/sim_good/: simulation.yaml
examples/graph/stack/sim_with_error/: simulation.yaml
examples/graph/static_validation/data/: simulation_with_error.yaml
examples/models/: CMakeLists.txt  Makefile
examples/models/gateway/: CMakeLists.txt  gateway.c  gateway.yaml  model.yaml  signalgroup.yaml  simulation.yaml
examples/models/network/: CMakeLists.txt  model.yaml  model_can.c  model_pdu.c  simulation.yaml
examples/models/network_can/: CMakeLists.txt  model.yaml
examples/models/network_pdu/: CMakeLists.txt  model.yaml  simulation.yaml
examples/models/simple/: CMakeLists.txt  model.c  model.yaml  simulation.yaml
examples/network/: Makefile  README.md  network.dse  signalgroup_can.yaml  signalgroup_pdu.yaml
examples/notebook/: README.md  Taskfile.yaml  input__signalgroup.yaml  open_loop_simulation.ipynb
examples/openloop/: Makefile  README.md  Taskfile.yaml  input__model.yaml  open_loop_simulation.ipynb  openloop.dse  openloop.sh  post_run.sh  simulation.yaml
examples/openloop/Notebook/: README.md  open_loop_simulation.ipynb
examples/openloop/test/: Taskfile.yml  openloop.json  openloop.yaml  simulation.yaml
examples/openloop_lua/: Makefile  README.md  csv.lua  linear.lua  openloop.dse
examples/openloop_lua/data/: input_sg.yaml
examples/runnable/: .gitignore  Makefile  README.md  runnable.dse
examples/vscode/: .gitignore  Makefile  README.md  openloop.dse  post_run.sh
graph/: Makefile  README.md  go.mod  go.sum
graph/cmd/: README.md
graph/cmd/graph/: main.go  main_test.go
graph/cmd/graph/reports/: duplicate_writes.yaml  stack.yaml  static_validation.yaml
graph/internal/app/graph/: drop.go  export.go  graph_test.go  import.go  ping.go  report.go
graph/internal/pkg/file/: handler.go  handler_test.go
graph/internal/pkg/graph/: graph.go
licenses/chevrotain/chevrotain/: Notice  __url__
lsp/: .gitignore  INSTALLATION.md  Makefile  README.md  language-configuration.json  package.json  tsconfig.json
lsp/ast_dag/: ast.html  ast.js  ast.json  input.json  package.json
lsp/ast_dag/examples/: detailed.dse
lsp/client/: package.json  tsconfig.json
lsp/client/src/: extension.ts
lsp/scripts/: dse-mdf2csv.sh
lsp/server/: package.json  tsconfig.json
lsp/server/src/: server.ts
lsp/syntaxes/: dse.tmLanguage.json  fsil.tmLanguage.json
tests/e2e/dsl/: arch.default.txtar  arch.model.txtar  arch.simulation.txtar  arch.stack.txtar  envar.global.stacks.txtar  envar.global.txtar  envar.model.txtar  envar.simulation.txtar  envar.stack.model.redefine.txtar  envar.stack.txtar  file.embedded.txtar  file.local.txtar  file.remote.boschdevcloud.txtar  file.remote.github.txtar  file.uses.path.txtar  gateway.arch.txtar  gateway.fmu.stack.txtar  gateway.txtar  gateway.workflow.txtar  model.fmu.path.txtar  model.fmu.txtar  model.fmu.url.path.txtar  model.fmu.url.txtar  model.lua.file.txtar  model.lua.txtar  model.lua.url.path.txtar  model.lua.url.txtar  model.uid.txtar  simulation.endtime.txtar  simulation.stepsize.txtar  stack.envar.model.redefine.txtar  stack.sequential.txtar  stack.stacked.txtar  template.specialvars.txtar  uses.file.path.txtar  uses.file.txtar  workflow.stack.default.uses.txtar  workflow.stack.model.txtar  workflow.stack.txtar  workflow.uses.txtar  (+3 more)
tests/e2e/examples/: gateway.txtar  gateway.workflow.txtar  network.txtar  openloop.txtar  openloop_lua.txtar  runnable.txtar
tests/e2e/graph/: graph.txtar  report_duplicate_writes.txtar  report_stack.txtar  report_static_validation.txtar
tests/e2e/system/: builder.lua.txtar
tests/e2e_internal/dsl/: file.remote.boschdevcloud.txtar
tests/e2e_internal/examples/: runnable.txtar
tests/scripts/: graph.sh  workflow.sh
tests/testdata/e2e/: Makefile  hello.fmu  hello.lua  remote_foo.txt
tests/testscript/e2e/dsl/: arch.default.txtar  arch.model.txtar  arch.simulation.txtar  arch.stack.txtar  envar.model.txtar  envar.simulation.txtar  envar.stack.txtar  file.local.txtar  file.remote.boschdevcloud.txtar  file.remote.github.txtar  model.uid.txtar  simulation.endtime.txtar  simulation.stepsize.txtar  stack.sequential.txtar  stack.stacked.txtar
tests/testscript/e2e/examples/: openloop.txtar  runnable.txtar
tests/testscript/scripts/: workflow.sh
(+114 files in other folders)
